<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.WelcomeFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

         <ImageView
             android:layout_margin="40dp"
             android:src="@drawable/ada_login150"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>

         <TextView
             android:text="@string/welcome"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:layout_marginRight="50dp"
             android:layout_marginLeft="50dp"

             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>

         <TextView
             android:text="@string/telefonNum"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:layout_marginTop="50dp"
             android:layout_marginLeft="45dp"
             android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>

         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

            <EditText
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:background="@drawable/rounded_square_background"
                android:enabled="false"
                android:padding="15dp"
                android:text="+90"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="45dp"
                android:inputType="number"
                android:background="@drawable/rounded_square_background"
                android:padding="15dp"
                android:textColor="@color/black" />

         </LinearLayout>

         <Button android:id="@+id/nextBtn"
             android:background="@drawable/rounded_square_background"
             android:layout_marginTop="10dp"
             android:layout_marginRight="45dp"
             android:layout_marginLeft="45dp"
             android:text="Devam Et"
             android:textAllCaps="false"
             android:textColor="#C66AA5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>



      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent">

         <TextView
             android:text="@string/earlyAcces"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:layout_marginRight="45dp"
             android:layout_marginLeft="45dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>

         <TextView
             android:text="@string/about"
             android:textAlignment="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="#42A5F5"
             android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>

         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

            <TextView
                android:text="@string/privacy"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/instr"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>

         </androidx.constraintlayout.widget.ConstraintLayout>

      </LinearLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>